fix TestFilter